2009-03-26 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-13
	* Fix root Warnings, remove saturation from error histogram

2009-02-05  Alan Watson  <Alan.Watson@cern.ch>
        * Tag as TrigT1CaloMonitoring-00-04-12
        * Compatability with splitting of TrigT1Calo into TrigT1CaloEvent
          and TrigT1CaloUtils

2009-01-07  scott s snyder  <snyder@bnl.gov>

	* Tag as TrigT1CaloMonitoring-00-04-11
	* src/JEPTransPerfMon.cxx: Fix compilation warnings.

2009-01-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-10
        * Fix for Savannah bug #45532

2008-11-28 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-09
	* checkreq fix
	
2008-11-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-08
        * Try to get current tag back to HEAD.

2008-11-19 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-07
	* Memory leak corrected

2008-11-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-06
        * Take account of Limited RoI Set bit in CP RoI comparison with simulation.
        * Add separate EM/Tau RoI hitmaps.
        * Update list of ignored Triggertowers for CP monitoring.

2008-11-05 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-05
	* bugfix and new error summaries

2008-10-27 Andrea Neusiedl <andrea.neusiedl@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-04-04
	* new simulation scheme and bugfixes


2008-10-23  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-04-03
        * Reduce cputime for CP monitoring by ~40%

2008-10-17  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-04-02
        * Distinguish between missing ROD fragment and no payload
        * in ROD monitoring.

2008-10-13  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>